--- a/styles.css
+++ b/styles.css
@@ -56,9 +56,7 @@ h1 {
   background-color: white;
   color: grey;
 }
-.suggestions{
-  margin: 4px 0px;
-}
+
 textarea{
   width: 100%;
   height: 110px;
@@ -66,9 +64,9 @@ textarea{
 }
 #submit{
 display: block;
-background-color: rgb(55, 195, 55);
+background-color: #37af65;
 width: 100%;
-height: 50px;
+height: 45px;
 margin-top: 15px;
 border: none;
 text-align: center;
@@ -76,6 +74,7 @@ border-radius: 2px;
 padding: 10px;
 cursor: pointer;
 color: white;
+font-size: 17px;
 }
 [type=checkbox] {
   width: 20px;
@@ -111,4 +110,17 @@ body::before {
   form{
     width: 100%;
   }
+}
+.radio{
+  display: flex;
+  margin-bottom: 10px;
+}
+input{
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+.suggestions{
+  display: flex;
+  margin: 6px 0px;
 }
