--- a/styles.css
+++ b/styles.css
@@ -79,8 +79,12 @@ font-size: 17px;
 [type=checkbox] {
   width: 20px;
   height: 20px;
+  margin: 0;
+  margin-right: 10px;
+  margin-top: 1px;
 }
 body{
+  font-family: "Poppins", sans-serif;
   margin: 0;
 }
 span{
