--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+
+  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,200&family=Roboto:ital,wght@0,100;0,300;0,400;1,100&display=swap');
+
+
+
 *{
   box-sizing: border-box;
 }
@@ -16,8 +21,6 @@ p{
   margin-bottom: 0.5rem;
 }
 h1 {
-  font-family: "Poppins", sans-serif;
-  font-weight: 400;
   padding: 30px;
   padding-bottom: 0;
   font-size: 2em;
