--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
-
-  @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,200&family=Roboto:ital,wght@0,100;0,300;0,400;1,100&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,200&family=Roboto:ital,wght@0,100;0,300;0,400;1,100&display=swap");
+* {
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
@@ -14,7 +13,7 @@ form {
   border-radius: 5px;
   font-size: 1.3em;
 }
-p{
+p {
   margin-top: 1.5rem;
   margin-bottom: 0.5rem;
 }
@@ -36,7 +35,7 @@ h1 {
   margin-top: 0;
   margin-bottom: 30px;
 }
-.personal-data{
+.personal-data {
   display: block;
   margin: 15px 0px;
   border: 8px;
@@ -46,7 +45,7 @@ h1 {
   padding: 0.5em;
   font-size: 0.8em;
 }
-#dropdown{
+#dropdown {
   width: 100%;
   margin: 0.5px;
   height: 40px;
@@ -57,36 +56,36 @@ h1 {
   color: grey;
 }
 
-textarea{
+textarea {
   width: 100%;
   height: 110px;
   padding: 10px;
 }
-#submit{
-display: block;
-background-color: #37af65;
-width: 100%;
-height: 45px;
-margin-top: 15px;
-border: none;
-text-align: center;
-border-radius: 2px;
-padding: 10px;
-cursor: pointer;
-color: white;
-font-size: 17px;
+#submit {
+  display: block;
+  background-color: #37af65;
+  width: 100%;
+  height: 45px;
+  margin-top: 15px;
+  border: none;
+  text-align: center;
+  border-radius: 2px;
+  padding: 10px;
+  cursor: pointer;
+  color: white;
+  font-size: 17px;
 }
-[type=checkbox] {
+[type="checkbox"] {
   width: 20px;
   height: 20px;
   margin: 0;
   margin-right: 10px;
   margin-top: 1px;
 }
-body{
+body {
   margin: 0;
 }
-span{
+span {
   font-size: 0.7em;
 }
 body::before {
@@ -109,21 +108,21 @@ body::before {
   background-position: center;
 }
 
-@media (min-width: 250px) and (max-width: 600px){
-  form{
+@media (min-width: 250px) and (max-width: 600px) {
+  form {
     width: 100%;
   }
 }
-.radio{
+.radio {
   display: flex;
   margin-bottom: 10px;
 }
-input{
+input {
   width: 20px;
   height: 20px;
   margin-right: 10px;
 }
-.suggestions{
+.suggestions {
   display: flex;
   margin: 6px 0px;
 }
